fix(pr21): address PR #21 review feedback (CodeRabbit + Devin + Gemini + Codex)
17 review findings across 4 reviewers; all verified real, none false positives.

Critical (data corruption / dead code paths):

- C1 Devin: cancelOrder is not @Transactional, so OrderCancelledEvent
  fires outside an active tx and PointRefundListener (AFTER_COMMIT) is
  silently dropped — burned points never refunded on cancel. Wraps in
  @Transactional; the JPA tx is empty (Spanner-only writes) but
  provides the AFTER_COMMIT hook.
- C2 Devin: PaymentServiceImpl computed subtotal via Long.parseLong on
  a NUMERIC(12,2) string ("1500.00") which always throws, silently
  zeroing the subtotal — points were NEVER earned on any paid order.
  Replaced with BigDecimal.longValueExact.
- C3 Devin: PayPayWebhookController @Transactional caused
  ConflictException to flip the outer JPA tx to rollback-only, which
  rolled back the processedEvents.deleteById cleanup — Spring threw
  UnexpectedRollbackException returning 500 and PayPay retried forever.
  Removed the controller-level annotation; the downstream service
  method is already @Transactional.
- C4 Devin: Spanner order persisted before points-burn; failure left
  an orphan PENDING order with released holds, poisoning idempotency
  on retry. Pre-generates the order id, burns FIRST, then writes to
  Spanner with the pre-generated id; refunds the burn if the Spanner
  write fails. Added OrderRepository.saveWithId(orderId, ...).
- C5 CodeRabbit: PointBalance read-modify-write via plain save() lost
  updates between concurrent earn/burn calls. Replaced with @Modifying
  CAS query (PointBalanceRepository.casBalance) + insertIfMissing
  ON CONFLICT DO NOTHING + a 5-attempt retry loop in PointServiceImpl.
- C6 CodeRabbit: PointLedger existsBy-then-save had a TOCTOU gap
  against the (reason, order_id) unique constraint. Now catches
  DataIntegrityViolationException and reverses the balance delta the
  current writer applied so the net effect is exac